trying to fix out of memory error on Travis CI